# keystroke-telemetry

./: .env.example  .gitignore  .master_test_sha  CHANGELOG.md  FIX_PLAN.md  LICENSE  MANIFEST.md  MASTER_MANIFEST.md  README.md  _audit_compliance.py  _audit_registry.py  _build_organism_health.py  _check_veins.py  _export_dev_story.py  _fix_broken_inits.py  _fix_literal_newlines.py  _fix_stale_globs.py  _harvest_intents.py  _run_abbrev_rename.py  _run_glyph_rename.py  _run_post_cycle.py  _run_smart_rename.py  _seed_historical_vitals.py  _seed_intent_numeric.py  _seed_pigeon_names.py  _test_flow.py  _test_gemini_actions.py  _test_import_rewriter_patch.py  _tmp_analysis.py  _tmp_analyze_fixes.py  _tmp_analyze_stats.py  _tmp_audit_intent.py  _tmp_backfill_lastchange.py  _tmp_batch_shed.py  _tmp_binding_debug.py  _tmp_bug_audit.py  _tmp_chat_result.txt  _tmp_check_esc.py  _tmp_check_ids.py  _tmp_check_live.py  (+156 more)
.github/: copilot-instructions.md
client/: .chat_composition_analyzer_decomposed.py  MANIFEST.md  chat_composition_analyzer.py  chat_composition_analyzer_seq001_v001.py  chat_response_reader.py  chat_response_reader_seq001_v001.py  composition_recon.py  composition_recon_seq001_v001.py  keystroke-telemetry.js  operator_state_daemon.py  os_hook.py  prompt_telemetry_daemon.py  pulse_harvest_daemon.py  telemetry_cleanup.py  telemetry_cleanup_seq001_v001.py  uia_reader.py  uia_reader_seq001_v001.py  vscdb_poller.py
data/: operator_profile.db  schema.sql
demo_logs/: events_4c9d287d725c.jsonl  summary_4c9d287d725c.json
docs/: AI_FINGERPRINT_REPO_PLUGIN.md  DEV_STORY.md  (+29 more)
(+3199 files in other folders)
